--- a/css/index.css
+++ b/css/index.css
@@ -38,13 +38,14 @@ a:hover{
 h1{
     font-family: var(--gloriapolice);
     font-size: 45px;
-    margin-bottom: 20px;
+    font-weight: 400;
 }
 
 h2{
-    font-family: var(--gloriapolice);
-    font-size: 20px;
+    font-family: var(--notosans);
+    font-size: 16px;
     font-weight: 400;
+    color: var(--grisfoncé);
 }
 
 p{
@@ -55,6 +56,62 @@ p{
 i{
     color: var(--orangefoncé);
     padding-right: 10px;
+}
+
+/* Main */
+
+/* Section 1 */
+
+main .section1{
+    max-width: 1440px;
+    margin: auto;
+    background-color: var(--rose);
+    height: 200px;
+    align-content: space-evenly;
+}
+
+main .section1 h1{
+    text-align: center;
+}
+
+/* Section 2 */
+
+main .section2 div{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    margin: 20px auto;
+    max-width: 1150px;
+    gap: 20px; 
+    padding-right: 80px;
+}
+
+main .section2 div img{
+    width: 400px;
+    margin-bottom: 10px;
+}
+
+main .section2 div .date{
+    color: var(--gris);
+    font-size: 14px;
+    margin-bottom: 10px;
+}
+
+main .section2 div .info{
+    color: var(--grisfoncé);
+    font-size: 14px;
+    text-align: justify;
+    margin-bottom: 10px;
+}
+
+main .section2 div a{
+    color: var(--bleu);
+    font-size: 14px;
+    margin-bottom: 10px;
+}
+
+main .section2 div a:hover{
+    color: var(--orangefoncé);
+    transition: all 0.3s ease-in-out;
 }
 
 /* Header */
@@ -124,4 +181,78 @@ footer .nav #artcopy{
 
 footer .nav #Accueil{
     color: var(--orangefoncé);
+}
+
+@media screen and (max-width: 1024px){
+    header{
+        padding: 0 15px;
+    }
+
+    header nav ul{
+        display: none;
+    }
+
+    header #burger_menu{
+        display: flex;
+    }
+
+    header div{
+        display: none;
+    }
+
+    main .section1 h1{
+        font-size: 28px;
+    }
+
+    main{
+        padding: 0 15px;
+    }
+
+    main .section2 div{
+        display: inline;
+        padding-right: 0;
+        text-align: center;
+    }
+
+    main .section2 div img{
+        margin-top: 20px;
+    }
+
+    main .section2 div .info{
+        text-align: center;
+    }
+
+    footer{
+        padding: 0 15px;
+    }
+
+    footer .nav #artnav{
+        display: none;
+    }
+}
+
+@media screen and (max-width: 767px){
+    header{
+        padding: 0 15px;
+    }
+
+    main .section2 div img{
+        width: 250px;
+    }
+
+    main .section1 h1{
+        font-size: 18px;
+    }
+
+    footer{
+        padding: 0 15px;
+    }
+
+    footer a{
+        display: none;
+    }
+
+    footer .nav #artnav nav{
+        display: none;
+    }
 }
